api_versioned_docs/version-12.1.3/avalonia/controls/documents/serialization/rtf/rtfserializer.mdx
---
title: 'RtfSerializer'
hide_title: true
slug: '/avalonia/controls/documents/serialization/rtf/rtfserializer'
uid: 'Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer'
commentId: 'T:Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.Documents.Serialization.Rtf'
assembly: 'Avalonia.Controls.Documents.Serialization.Rtf'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Documents.Serialization.Rtf'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">RtfSerializer Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Documents.Serialization.Rtf</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.Documents.Serialization.Rtf</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.Documents.Serialization.Rtf</code>
</div>
</div>

<div className="apiref-page__lead">

Serializer for Rich Text Format (RTF) documents.

</div>

<div className="apiref-page__signature">

```csharp
public class RtfSerializer
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> RtfSerializer
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> <a href="../idocumentserializer">IDocumentSerializer</a>
</div>
</div>

## Remarks

Supports reading and writing RTF documents with:
- Character formatting: bold, italic, underline, strikethrough, font, size, colors
- Paragraph formatting: alignment, indentation
- Unicode text

This serializer is thread-safe for concurrent operations.

## Constructors

| Name | Description |
| --- | --- |
| [RtfSerializer](#uid-72fca32a9e) | Initializes a new instance of [Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer](xref:Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer) with optional serialization options. |

<section className="apiref-page__member-entry">

<span id="uid-72fca32a9e"></span>

### RtfSerializer Constructor

Initializes a new instance of [Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer](xref:Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer) with optional serialization options.

```csharp
public RtfSerializer(Avalonia.Controls.Documents.Serialization.DocumentSerializerOptions options)
```

#### Parameters

`options` [Avalonia.Controls.Documents.Serialization.DocumentSerializerOptions](xref:Avalonia.Controls.Documents.Serialization.DocumentSerializerOptions)

Serialization options; defaults are used when .


</section>

## Methods

| Name | Description |
| --- | --- |
| [CanDeserialize](#uid-ad95b78f71) | Checks if a stream appears to contain this format. |
| [Deserialize (2 overloads)](#uid-504444cde9) | Deserializes a document from a stream on the calling thread. |
| [DeserializeAsync](#uid-fbbc313289) | Runs [Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer.Deserialize(System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer.Deserialize%28System.IO.Stream%2CSystem.Threading.CancellationToken%29) on a pool thread. |
| [Serialize (2 overloads)](#uid-97b9f367f1) | Serializes a document snapshot to an RTF string. |
| [SerializeAsync](#uid-2ef73fc9ef) | Runs [Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer.Serialize(Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot,System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer.Serialize%28Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot%2CSystem.IO.Stream%2CSystem.Threading.CancellationToken%29) on a pool thread. |

<section className="apiref-page__member-entry">

<span id="uid-ad95b78f71"></span>

### CanDeserialize Method

Checks if a stream appears to contain this format.

```csharp
public bool CanDeserialize(System.IO.Stream stream)
```

#### Parameters

`stream` System.IO.Stream

The stream to check. Must be readable and seekable.


#### Returns

bool

True if the stream likely contains this format; otherwise, false.


#### Remarks

This method does not consume the stream; it restores the original position after checking.

</section>

<span id="uid-504444cde9"></span>

### Deserialize overloads

<section className="apiref-page__member-entry">

<span id="uid-bc8231623c"></span>

#### Deserialize Method

Deserializes a document from a stream on the calling thread.

```csharp
public Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot Deserialize(System.IO.Stream stream, System.Threading.CancellationToken cancellationToken)
```

##### Parameters

`stream` System.IO.Stream

The stream to read from. Must be readable.


`cancellationToken` System.Threading.CancellationToken

Cancellation token.


##### Returns

[Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot)

The deserialized [Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot).


##### Remarks

Defaults to blocking on [Avalonia.Controls.Documents.Serialization.IDocumentSerializer.DeserializeAsync(System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.IDocumentSerializer.DeserializeAsync%28System.IO.Stream%2CSystem.Threading.CancellationToken%29), so a serializer written against
the released interface keeps working. Implement this member instead: no format here
performs asynchronous I/O, so the asynchronous pair only moves processor-bound work onto
a pool thread.

##### Exceptions

- [\`stream\` is null.](xref:System.ArgumentNullException)
- [\`stream\` is not readable.](xref:System.ArgumentException)
- [This serializer cannot read; see \[Avalonia.Controls.Documents.Serialization.IDocumentSerializer.CanRead\](xref:Avalonia.Controls.Documents.Serialization.IDocumentSerializer.CanRead).](xref:System.NotSupportedException)
- [The stream content is invalid for this format.](xref:Avalonia.Controls.Documents.Serialization.SerializationException)

</section>

<section className="apiref-page__member-entry">

<span id="uid-ae60a62e05"></span>

#### Deserialize Method

Deserializes a document from an RTF string.

```csharp
public Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot Deserialize(string rtf)
```

##### Parameters

`rtf` string

The RTF content string.


##### Returns

[Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot)

A new [Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot) containing the parsed content.


</section>

<section className="apiref-page__member-entry">

<span id="uid-fbbc313289"></span>

### DeserializeAsync Method

Runs [Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer.Deserialize(System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer.Deserialize%28System.IO.Stream%2CSystem.Threading.CancellationToken%29) on a pool thread.

```csharp
public System.Threading.Tasks.Task<Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot> DeserializeAsync(System.IO.Stream stream, System.Threading.CancellationToken cancellationToken)
```

#### Parameters

`stream` System.IO.Stream

The stream to read from.


`cancellationToken` System.Threading.CancellationToken

Cancellation token.


#### Returns

System.Threading.Tasks.Task&lt;[Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot)&gt;

The deserialized snapshot.


#### Remarks

A thread-offload convenience, not asynchronous I/O: no format here reads asynchronously.
Where you are already off the UI thread, call [Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer.Deserialize(System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer.Deserialize%28System.IO.Stream%2CSystem.Threading.CancellationToken%29) and keep the
thread you are on.

</section>

<span id="uid-97b9f367f1"></span>

### Serialize overloads

<section className="apiref-page__member-entry">

<span id="uid-df1efd13c8"></span>

#### Serialize Method

Serializes a document snapshot to an RTF string.

```csharp
public string Serialize(Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot snapshot)
```

##### Parameters

`snapshot` [Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot)

The document snapshot to serialize.


##### Returns

string

The RTF content string.


</section>

<section className="apiref-page__member-entry">

<span id="uid-741a18082b"></span>

#### Serialize Method

Serializes a document snapshot to a stream on the calling thread.

```csharp
public void Serialize(Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot snapshot, System.IO.Stream stream, System.Threading.CancellationToken cancellationToken)
```

##### Parameters

`snapshot` [Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot)

The document snapshot to serialize.


`stream` System.IO.Stream

The stream to write to. Must be writable.


`cancellationToken` System.Threading.CancellationToken

Cancellation token.


##### Remarks

Defaults to blocking on [Avalonia.Controls.Documents.Serialization.IDocumentSerializer.SerializeAsync(Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot,System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.IDocumentSerializer.SerializeAsync%28Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot%2CSystem.IO.Stream%2CSystem.Threading.CancellationToken%29), so a serializer written against the
released interface keeps working. Implement this member instead.

##### Exceptions

- [\`snapshot\` or \`stream\` is null.](xref:System.ArgumentNullException)
- [\`stream\` is not writable.](xref:System.ArgumentException)
- [This serializer cannot write; see \[Avalonia.Controls.Documents.Serialization.IDocumentSerializer.CanWrite\](xref:Avalonia.Controls.Documents.Serialization.IDocumentSerializer.CanWrite).](xref:System.NotSupportedException)

</section>

<section className="apiref-page__member-entry">

<span id="uid-2ef73fc9ef"></span>

### SerializeAsync Method

Runs [Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer.Serialize(Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot,System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.Rtf.RtfSerializer.Serialize%28Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot%2CSystem.IO.Stream%2CSystem.Threading.CancellationToken%29) on a pool thread.

```csharp
public System.Threading.Tasks.Task SerializeAsync(Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot snapshot, System.IO.Stream stream, System.Threading.CancellationToken cancellationToken)
```

#### Parameters

`snapshot` [Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot)

The snapshot to serialize.


`stream` System.IO.Stream

The stream to write to.


`cancellationToken` System.Threading.CancellationToken

Cancellation token.


#### Returns

System.Threading.Tasks.Task


#### Remarks

A thread-offload convenience, not asynchronous I/O. The snapshot is already detached from
the document, so the work needs no UI thread either way.

</section>

## Properties

| Name | Description |
| --- | --- |
| [CanRead](#uid-d6e1689daa) | Whether this serializer supports reading. Read-only UIs can filter serializer lists on this instead of catching [NotSupportedException](xref:System.NotSupportedException) from [Avalonia.Controls.Documents.Serialization.IDocumentSerializer.Deserialize(System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.IDocumentSerializer.Deserialize%28System.IO.Stream%2CSystem.Threading.CancellationToken%29). |
| [CanWrite](#uid-d1ea4bdb89) | Whether this serializer supports writing documents. |
| [FileExtension](#uid-18b3d14ee2) | Gets the file extension including the dot (e.g., ".rtf"). |
| [FormatName](#uid-3a292e9793) | Gets the format name this serializer handles (e.g., "Rtf", "Docx", "PlainText"). |
| [MimeType](#uid-bb981f39e5) | Gets the MIME type for the format (e.g., "application/rtf"). |

<section className="apiref-page__member-entry">

<span id="uid-d6e1689daa"></span>

### CanRead Property

Whether this serializer supports reading. Read-only UIs can filter serializer lists on
this instead of catching [NotSupportedException](xref:System.NotSupportedException) from
[Avalonia.Controls.Documents.Serialization.IDocumentSerializer.Deserialize(System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.IDocumentSerializer.Deserialize%28System.IO.Stream%2CSystem.Threading.CancellationToken%29).

```csharp
public bool CanRead { get; set; }
```

#### Remarks

Defaults to so a serializer written before this member existed
still compiles. A serializer that cannot read says so.

</section>

<section className="apiref-page__member-entry">

<span id="uid-d1ea4bdb89"></span>

### CanWrite Property

Whether this serializer supports writing documents.

```csharp
public bool CanWrite { get; set; }
```

#### Remarks

Defaults to so a serializer written before this member existed
still compiles. A serializer that cannot write says so.

</section>

<section className="apiref-page__member-entry">

<span id="uid-18b3d14ee2"></span>

### FileExtension Property

Gets the file extension including the dot (e.g., ".rtf").

```csharp
public string FileExtension { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3a292e9793"></span>

### FormatName Property

Gets the format name this serializer handles (e.g., "Rtf", "Docx", "PlainText").

```csharp
public string FormatName { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-bb981f39e5"></span>

### MimeType Property

Gets the MIME type for the format (e.g., "application/rtf").

```csharp
public string MimeType { get; set; }
```

</section>

</ApiRefPage>

